// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`height renders 0 1`] = `
Array [
  .c0 {
  height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  height: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`height renders function 1`] = `
Array [
  .c0 {
  height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  height: has;
}

<div
    className="c0"
  />,
  .c0 {
  height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  height: has;
}

<div
    className="c0"
  />,
]
`;

exports[`height renders invalid theme path 1`] = `
Array [
  .c0 {
  height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  height: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`height renders negative number 1`] = `
Array [
  .c0 {
  height: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  height: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  height: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  height: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`height renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  height: July;
}

@media screen and (min-width:November) {
  .c0 {
    height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  height: July;
}

@media screen and (min-width:November) {
  .c0 {
    height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  height: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    height: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  height: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    height: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`height renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    height: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`height renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  height: July;
}

@media May {
  .c0 {
    height: August;
  }
}

@media April {
  .c0 {
    height: September;
  }
}

@media January {
  .c0 {
    height: November;
  }
}

@media April {
  .c0 {
    height: August;
  }
}

@media June {
  .c0 {
    height: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  height: July;
}

@media May {
  .c0 {
    height: August;
  }
}

@media April {
  .c0 {
    height: September;
  }
}

@media January {
  .c0 {
    height: November;
  }
}

@media April {
  .c0 {
    height: August;
  }
}

@media June {
  .c0 {
    height: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  height: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    height: November;
  }
}

@media April {
  .c0 {
    height: January;
  }
}

@media January {
  .c0 {
    height: December;
  }
}

@media April {
  .c0 {
    height: April;
  }
}

@media June {
  .c0 {
    height: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  height: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    height: November;
  }
}

@media April {
  .c0 {
    height: January;
  }
}

@media January {
  .c0 {
    height: December;
  }
}

@media April {
  .c0 {
    height: April;
  }
}

@media June {
  .c0 {
    height: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`height renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    height: July;
  }
}

@media April {
  .c0 {
    height: August;
  }
}

@media January {
  .c0 {
    height: September;
  }
}

@media April {
  .c0 {
    height: November;
  }
}

@media June {
  .c0 {
    height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    height: July;
  }
}

@media April {
  .c0 {
    height: August;
  }
}

@media January {
  .c0 {
    height: September;
  }
}

@media April {
  .c0 {
    height: November;
  }
}

@media June {
  .c0 {
    height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    height: January;
  }
}

@media April {
  .c0 {
    height: December;
  }
}

@media January {
  .c0 {
    height: April;
  }
}

@media April {
  .c0 {
    height: May;
  }
}

@media June {
  .c0 {
    height: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    height: January;
  }
}

@media April {
  .c0 {
    height: December;
  }
}

@media January {
  .c0 {
    height: April;
  }
}

@media April {
  .c0 {
    height: May;
  }
}

@media June {
  .c0 {
    height: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`height renders postitive number 1`] = `
Array [
  .c0 {
  height: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  height: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  height: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  height: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`height renders string 1`] = `
Array [
  .c0 {
  height: July;
}

<div
    className="c0"
  />,
  .c0 {
  height: July;
}

<div
    className="c0"
  />,
  .c0 {
  height: June;
}

<div
    className="c0"
  />,
  .c0 {
  height: June;
}

<div
    className="c0"
  />,
]
`;

exports[`height renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`height renders valid theme path 1`] = `
Array [
  .c0 {
  height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  height: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
